fix padding on mobile post

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -406,7 +406,7 @@
                 .information{
                     
                     // float: left;
-                    padding: 15px 15px 15px 0;
+                    padding: 15px 0;
                     vertical-align: top;
                     display: table-cell;
                     p{
